# CopilotTrae

./: .env  .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
crates/cli-app/: Cargo.toml
crates/core-contracts/: Cargo.toml
crates/router-core/: Cargo.toml
crates/runtime-core/: Cargo.toml
crates/terminal-core/: Cargo.toml
docs/architecture/: migration-to-rust-ts-tauri.md
docs/runbooks/: production-readiness.md
scripts/: export_contract_fixtures.py
tests/: test_agent.py  test_cerebras_client.py  test_cli.py  test_command_fix.py  test_contract_fixtures_export.py  test_contract_fixtures_layout.py  test_contracts.py  test_hub_credential_service.py  test_hub_credentials_contracts.py  test_hub_env_credentials.py  test_log_safety.py  test_memory.py  test_models.py  test_module_registry.py  test_multimodal_processor.py  test_multimodal_routing.py  test_multimodal_scoring.py  test_openai_compatible_client.py  test_powershell_middleware.py  test_provider_factory.py  test_real_terminal_usage.py  test_router_contract_invariants.py  test_router_contracts.py  test_router_events.py  test_router_integration.py  test_router_pipeline.py  test_router_policies.py  test_runtime.py  test_runtime_router_wiring.py  test_rust_workspace_scaffold.py  test_session_runner.py  test_settings_production_validation.py  test_smoke.py  test_terminal_host.py  test_terminal_integration.py  test_terminal_ux.py  test_tesseract_ocr.py  test_tool_registry.py
tmp/: direct_tesseract_smoke.tsv  direct_tesseract_smoke.txt  ocr_validation_results.json  ocr_validation_results_real.json
(+108 files in other folders)
